--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -34,15 +34,31 @@ icon: #@ icon
 #@  }, "github")
 #@ end
 
+#@ def gci_resource_name(family):
+#@ return family + "-gci"
+#@ end
+
+#@ def gci_resource(family):
+#@ return resource(gci_resource_name(family), "gci", {
+#@   "key": "((gcr-json-key))",
+#@   "family_project": "gemfire-dev",
+#@   "family": family,
+#@  }, "google-cloud")
+#@ end
+
 #@ def create_instance(image_family):
 task: create
 image: task-image
 config:
   platform: linux
+  inputs:
+    - name: #@ gci_resource_name(image_family)
+      path: image
   outputs:
     - name: identity
     - name: instance
   params:
+    BUILD_IMAGE_FILE: image/name
     BUILD_IMAGE_FAMILY: #@ image_family
   run:
     path: bash
@@ -57,7 +73,22 @@ config:
         BUILD_INSTANCE=${BUILD_INSTANCE:-"${BUILD_PREFIX}-$(uuidgen|tr '[:upper:]' '[:lower:]')"}
         BUILD_SUBNET=${BUILD_SUBNET:-default}
         BUILD_IMAGE_PROJECT=${BUILD_IMAGE_PROJECT:-${BUILD_PROJECT}}
-        BUILD_IMAGE_FAMILY=${BUILD_IMAGE_FAMILY:-jbarrett-10-2-build-rhel-7}
+        BUILD_IMAGE=${BUILD_IMAGE:-''}
+        BUILD_IMAGE_FILE=${BUILD_IMAGE_FILE:-''}
+        BUILD_IMAGE_FAMILY=${BUILD_IMAGE_FAMILY:-''}
+
+        if [ -z "${BUILD_IMAGE}" ]; then
+          if [ -n "${BUILD_IMAGE_FILE}" ]; then
+            BUILD_IMAGE=$(cat ${BUILD_IMAGE_FILE})
+          elif [ -n "${BUILD_IMAGE_FAMILY}" ]; then
+            BUILD_IMAGE=$(gcloud compute images describe-from-family ${BUILD_IMAGE_FAMILY} --project=${BUILD_IMAGE_PROJECT} --format 'value(name)')
+          fi
+        fi
+
+        if [ -z "${BUILD_IMAGE}" ]; then
+          echo "No build image."
+          exit 1;
+        fi
 
         ssh_key_file=${BUILD_IDENTITY_DIR}/${BUILD_USER}
         ssh_pubkey_file=${ssh_key_file}.pub
@@ -228,6 +259,7 @@ name: #@ "build-" + name + "-" + config
 plan:
   - get: task-image
   - get: source
+  - get: #@ gci_resource_name(image_family)
   - do:
       - #@ create_instance(image_family)
       - #@ await_instance()
@@ -252,10 +284,21 @@ plan:
 #@   "CPACK_GENERATORS": "TGZ"
 #@ }
 
+resource_types:
+  - name: gci
+    type: docker-image
+    source:
+      repository: smgoller/gci-resource
+
 resources:
   - #@ gcr_image_resource("task-image", "gcr.io/gemfire-dev/gemfire-develop-alpine-tools")
   - #@ git_resource("source", geode_native_uri, geode_native_branch)
-    #!  - #@ git_resource("ci", geode_native_uri, geode_native_branch, ["ci/*"])
+  #!  - #@ git_resource("ci", geode_native_uri, geode_native_branch, ["ci/*"])
+  - #@ gci_resource("jbarrett-10-2-build-windows-2019-vs-2017")
+  - #@ gci_resource("jbarrett-10-2-build-rhel-7")
+  - #@ gci_resource("jbarrett-10-2-build-rhel-8")
+  - #@ gci_resource("jbarrett-10-2-build-ubuntu-16-04")
+  - #@ gci_resource("jbarrett-10-2-build-ubuntu-18-04")
 
 jobs:
   #@ for config in ["Debug", "RelWithDebInfo"]:
